Added CityEx class Currently working on IsCamped method Prerequisites: Make PirateGameEx::ConvertList function static and public

--- a/MyFirstApplication/Boom/Boom.csproj
+++ b/MyFirstApplication/Boom/Boom.csproj
@@ -9,9 +9,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Boom</RootNamespace>
     <AssemblyName>Boom</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AircraftEx.cs" />
+    <Compile Include="CityEx.cs" />
     <Compile Include="DroneEx.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="MapObjectEx.cs" />
